# cmake_test

./: .gitignore  CMakeLists.txt  README.md  build_on_linux.sh  run_cmake.sh
include/: simple.h  test_forward_iterator.h  test_move_semantics.h  test_shared_ptr.h  test_variadic_templates.h
src/: simple.cpp  test.cpp  test_shared_ptr.cpp
